# cardano-mpfs-onchain

./: .gitignore  404.html  CLAUDE.md  README.md  WIP.md  cabal.project  flake.nix  gate.sh  index.html  justfile  mkdocs.yml  sitemap.xml
.github/workflows/: ci.yml  deploy-docs.yaml
.specify/memory/: constitution.md
architecture/overview/: index.html
architecture/proofs/: index.html
architecture/properties/: index.html
architecture/types/: index.html
architecture/validators/: index.html
cardano-mpfs-onchain/: cardano-mpfs-onchain.cabal
cardano-mpfs-onchain/e2e-test/: CageE2ESpec.hs  CageTxBuilder.hs  ConservationBalance.hs  Main.hs
cardano-mpfs-onchain/lib/Cardano/MPFS/: OnChain.hs
cardano-mpfs-onchain/lib/Cardano/MPFS/OnChain/: AssetName.hs  Datum.hs  Script.hs  Types.hs
development/: index.html
docs/: development.md  haskell-cage.md  index.md
docs/architecture/: blaster.md  overview.md  properties.md  types.md  validators.md
e2e/: docker-compose.yml  package.json  yaci.env
e2e/src/: blueprint.ts  cage.ts  codec.ts  migration.test.ts  setup.ts
haskell/: cabal.project  cardano-mpfs-cage.cabal
haskell-cage/: index.html
haskell/app/test-vectors/: Main.hs
haskell/e2e-test/: main.hs
haskell/e2e-test/Cardano/MPFS/Cage/E2E/: CageSpec.hs
haskell/lib/Cardano/MPFS/Cage/: AssetName.hs  Blueprint.hs  Config.hs  Ledger.hs  OnChain.hs  Proof.hs  Provider.hs  Trie.hs  Types.hs
haskell/lib/Cardano/MPFS/Cage/Trie/: Pure.hs  PureManager.hs
haskell/lib/Cardano/MPFS/Cage/TxBuilder/: Boot.hs  End.hs  Internal.hs  Reject.hs  Request.hs  Retract.hs  Sweep.hs  Update.hs
haskell/nix/: apps.nix  checks.nix  project.nix
haskell/test/: Main.hs
haskell/test/Cardano/MPFS/Cage/: TypesSpec.hs
lean/: ROADMAP.md  lakefile.lean
lean-blaster/: MpfsCageBlaster.lean  lake-manifest.json  lakefile.lean
lean-blaster/MpfsCageBlaster/: Properties.lean  Scripts.lean
lean/MpfsCage/: Lib.lean  SplitValidators.lean
scripts/: extract-blaster-uplc.sh
search/: search_index.json
spec/: CageDatum.lean
specs/001-fair-fee-model/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/001-fair-fee-model/checklists/: requirements.md
specs/002-mixed-modify-reject/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/002-mixed-modify-reject/checklists/: requirements.md
specs/003-per-token-cage-with-sweep/: plan.md  spec.md  tasks.md
specs/004-split-state-and-request-validators/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/055-cage-ledger-1-21-pins/: plan.md  spec.md  tasks.md
validators/: cage.ak  cage.props.ak  cage.tests.ak  cage_vectors.ak  lib.ak  lib.props.ak  lib.tests.ak  request.ak  shared.ak  state.ak  types.ak
