cabal-version: 3.4
name:          cardano-mpfs-cage
version:       0.0.0
synopsis:      Cage transaction builders and E2E tests for MPFS
description:
  Transaction builders for the Cardano MPFS cage
  validator. Uses the TxBuild DSL from cardano-node-clients
  for convergent fee balancing. Includes devnet E2E tests
  that verify the full cage protocol (boot, request, update,
  retract, reject, end) against real Plutus V3 script
  evaluation.

license:       Apache-2.0
license-file:  ../LICENSE
author:        Paolo Veronelli
maintainer:    paolo.veronelli@gmail.com
category:      Cardano
build-type:    Simple

common warnings
  ghc-options:
    -Wall -Werror -Wunused-imports -Wunused-packages
    -Wmissing-export-lists -Wname-shadowing
    -Wdeferred-out-of-scope-variables -Wpartial-type-signatures
    -Wredundant-constraints

  default-extensions:
    DerivingStrategies
    DuplicateRecordFields
    RecordWildCards
    StrictData

library
  import:           warnings
  default-language: GHC2021
  hs-source-dirs:   lib
  build-depends:
    , aeson                  >=2.1  && <2.3
    , base                   >=4.18 && <5
    , bytestring             >=0.11 && <0.13
    , cardano-crypto-class
    , cardano-ledger-allegra
    , cardano-ledger-alonzo
    , cardano-ledger-api
    , cardano-ledger-binary
    , cardano-ledger-conway
    , cardano-ledger-core
    , cardano-ledger-mary
    , cardano-node-clients
    , cardano-slotting
    , containers             >=0.6  && <0.8
    , crypton
    , memory
    , microlens
    , mts:mpf
    , mts:mpf-test-lib
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , text                   >=2.0  && <2.2
    , time

  exposed-modules:
    Cardano.MPFS.Cage.Blueprint
    Cardano.MPFS.Cage.Config
    Cardano.MPFS.Cage.OnChain
    Cardano.MPFS.Cage.Proof
    Cardano.MPFS.Cage.Provider
    Cardano.MPFS.Cage.Trie
    Cardano.MPFS.Cage.Trie.Pure
    Cardano.MPFS.Cage.Trie.PureManager
    Cardano.MPFS.Cage.TxBuilder.Boot
    Cardano.MPFS.Cage.TxBuilder.End
    Cardano.MPFS.Cage.TxBuilder.Internal
    Cardano.MPFS.Cage.TxBuilder.Reject
    Cardano.MPFS.Cage.TxBuilder.Request
    Cardano.MPFS.Cage.TxBuilder.Retract
    Cardano.MPFS.Cage.TxBuilder.Update
    Cardano.MPFS.Cage.Types

test-suite e2e-tests
  import:           warnings
  type:             exitcode-stdio-1.0
  default-language: GHC2021
  hs-source-dirs:   e2e-test
  main-is:          main.hs
  build-depends:
    , async
    , base
    , bytestring
    , cardano-ledger-api
    , cardano-ledger-mary
    , cardano-mpfs-cage
    , cardano-node-clients
    , cardano-node-clients:devnet
    , containers
    , hspec
    , microlens
    , ouroboros-network-api

  other-modules:    Cardano.MPFS.Cage.E2E.CageSpec
  ghc-options:      -threaded -with-rtsopts=-N
